# codex-petkit

./: .gitignore  ASSETS.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/create-pet/: SKILL.md
.agents/skills/create-pet/agents/: openai.yaml
.agents/skills/create-pet/references/: animation-review.md  capability-audit.md  look-direction.md  quality-gates.md  semantic-design.md  semantic-review.md  state-direction.md  state-distinction.md
.agents/skills/edit-pet/: SKILL.md
.agents/skills/edit-pet/agents/: openai.yaml
.agents/skills/edit-pet/references/: capability-audit.md  edit-modes.md  generative-editing.md  look-direction.md  review-gates.md  semantic-design.md  semantic-review.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_STATUS.md  LOCKY_FAILURE_AUDIT.md  PROJECT_FORMAT.md  TESTING.md
evaluations/compatibility/: v2-only.md
evaluations/create-pet/: locky-v2.md  nox.md
evaluations/edit-pet/: nox-jump-repair.md  nox-v2-upgrade.md  nox-waving.md
petkit/: __init__.py  __main__.py  build.py  cli.py  contract.py  imageops.py  project.py  semantic.py  v2.py
petkit/contracts/: v2.json
petkit/schemas/: project.schema.json
tests/: helpers.py  test_contract.py  test_locky_regression.py  test_safety.py  test_validation.py  test_workflow.py
tests/fixtures/: README.md
